feat:(add simple styles)

--- a/example/index.html
+++ b/example/index.html
@@ -3,7 +3,8 @@
 <head>
   <title> dev-dashboard </title>
 </head>
-
+<script src="//g.alicdn.com/code/lib/react/16.8.6/umd/react.development.js"></script>
+<script src="//g.alicdn.com/code/lib/react-dom/16.8.6/umd/react-dom.development.js"></script>
 <body>
   <div id="root"></div>
 
