feat(remove): material, because it 不太好看

--- a/example/index.html
+++ b/example/index.html
@@ -5,6 +5,7 @@
 </head>
 <script src="//g.alicdn.com/code/lib/react/16.8.6/umd/react.development.js"></script>
 <script src="//g.alicdn.com/code/lib/react-dom/16.8.6/umd/react-dom.development.js"></script>
+<script src="https://cdn.bootcdn.net/ajax/libs/react-router-dom/5.2.0/react-router-dom.js"></script>
 <body>
   <div id="root"></div>
 
